--- a/index.html
+++ b/index.html
@@ -15,48 +15,191 @@
         </div>
         <div id="nav-menu-1">
           <!-- Icons here -->
-          <a href="#" id="nav-saber"
-            ><img src="./images/class-ico-w/saber-w.png" alt="Saber"
-          /></a>
-          <a href="#" id="nav-lancer"
-            ><img src="./images/class-ico-w/lancer-w.png" alt="Lancer"
-          /></a>
-          <a href="#" id="nav-archer"
-            ><img src="./images/class-ico-w/archer-w.png" alt="Archer"
-          /></a>
-          <a href="#" id="nav-rider"
-            ><img src="./images/class-ico-w/rider-w.png" alt="Rider"
-          /></a>
-          <a href="#" id="nav-caster"
-            ><img src="./images/class-ico-w/caster-w.png" alt="Caster"
-          /></a>
-          <a href="#" id="nav-assassin"
-            ><img src="./images/class-ico-w/assassin-w.png" alt="Assassin"
-          /></a>
-          <a href="#" id="nav-berserker"
-            ><img src="./images/class-ico-w/berserker-w.png" alt="Berserker"
-          /></a>
-          <a href="#" id="nav-avenger"
-            ><img src="./images/class-ico-w/avenger-w.png" alt="Avenger"
-          /></a>
-          <a href="#" id="nav-ruler"
-            ><img src="./images/class-ico-w/ruler-w.png" alt="Ruler"
-          /></a>
-          <a href="#" id="nav-mooncancer"
-            ><img src="./images/class-ico-w/mooncancer-w.png" alt="Moon Cancer"
-          /></a>
-          <a href="#" id="nav-alter-ego"
-            ><img src="./images/class-ico-w/alter-ego-w.png" alt="Alter Ego"
-          /></a>
-          <a href="#" id="nav-foreigner"
-            ><img src="./images/class-ico-w/foreigner.png" alt="Foreigner"
-          /></a>
-          <a href="#" id="nav-shielder"
-            ><img src="./images/class-ico-w/shielder-w.png" alt="Shielder"
-          /></a>
-          <a href="#" id="nav-beast"
-            ><img src="./images/class-ico-w/beast-w.png" alt="Beast"
-          /></a>
+
+          <label for="saber">
+            <input
+              id="saber"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/saber-w.png"
+              alt="Saber"
+              class="nav-servant-ico"
+            />
+          </label>
+
+          <label for="lancer">
+            <input
+              id="lancer"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/lancer-w.png"
+              alt="Lancer"
+              class="nav-servant-ico"
+            />
+          </label>
+
+          <label for="archer">
+            <input
+              id="archer"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/archer-w.png"
+              alt="Archer"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="rider">
+            <input
+              id="rider"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/rider-w.png"
+              alt="Rider"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="caster">
+            <input
+              id="caster"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/caster-w.png"
+              alt="Caster"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="assassin">
+            <input
+              id="assassin"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/assassin-w.png"
+              alt="Assassin"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="berserker">
+            <input
+              id="berserker"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/berserker-w.png"
+              alt="Berserker"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="avenger">
+            <input
+              id="avenger"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/avenger-w.png"
+              alt="Avenger"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="ruler">
+            <input
+              id="ruler"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/ruler-w.png"
+              alt="Ruler"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="mooncancer">
+            <input
+              id="mooncancer"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/mooncancer-w.png"
+              alt="Mooncancer"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="alterEgo">
+            <input
+              id="alterEgo"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/alterEgo-w.png"
+              alt="Alter Ego"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="foreigner">
+            <input
+              id="foreigner"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/foreigner.png"
+              alt="Foreigner"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="shielder">
+            <input
+              id="shielder"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/shielder-w.png"
+              alt="Shielder"
+              class="nav-servant-ico"
+            />
+          </label>
+          <label for="beast">
+            <input
+              id="beast"
+              name="servant"
+              type="radio"
+              class="nav-servant-radio"
+            />
+            <img
+              src="./images/class-ico-w/beast-w.png"
+              alt="Beast"
+              class="nav-servant-ico"
+            />
+          </label>
         </div>
         <div id="nav-menu-2">
           <!-- Search Bar -->
@@ -72,6 +215,98 @@
           </form>
         </div>
       </div>
+    </div>
+
+    <!-- Servants -->
+    <div id="servants">
+      <!-- Card Sample Start -->
+      <div class="servant-card">
+        <div class="servant-border"></div>
+        <div class="servant-picture"></div>
+        <div class="servant-title">
+          <div class="servant-name"></div>
+          <div class="servant-class-name"></div>
+          <div class="servant-class-ico"></div>
+        </div>
+      </div>
+      <!-- Card Sample End -->
+      <!-- Card Sample Start -->
+      <div class="servant-card">
+        <div class="servant-border"></div>
+        <div class="servant-picture"></div>
+        <div class="servant-title">
+          <div class="servant-name"></div>
+          <div class="servant-class-name"></div>
+          <div class="servant-class-ico"></div>
+        </div>
+      </div>
+      <!-- Card Sample End -->
+      <!-- Card Sample Start -->
+      <div class="servant-card">
+        <div class="servant-border"></div>
+        <div class="servant-picture"></div>
+        <div class="servant-title">
+          <div class="servant-name"></div>
+          <div class="servant-class-name"></div>
+          <div class="servant-class-ico"></div>
+        </div>
+      </div>
+      <!-- Card Sample End -->
+      <!-- Card Sample Start -->
+      <div class="servant-card">
+        <div class="servant-border"></div>
+        <div class="servant-picture"></div>
+        <div class="servant-title">
+          <div class="servant-name"></div>
+          <div class="servant-class-name"></div>
+          <div class="servant-class-ico"></div>
+        </div>
+      </div>
+      <!-- Card Sample End -->
+      <!-- Card Sample Start -->
+      <div class="servant-card">
+        <div class="servant-border"></div>
+        <div class="servant-picture"></div>
+        <div class="servant-title">
+          <div class="servant-name"></div>
+          <div class="servant-class-name"></div>
+          <div class="servant-class-ico"></div>
+        </div>
+      </div>
+      <!-- Card Sample End -->
+      <!-- Card Sample Start -->
+      <div class="servant-card">
+        <div class="servant-border"></div>
+        <div class="servant-picture"></div>
+        <div class="servant-title">
+          <div class="servant-name"></div>
+          <div class="servant-class-name"></div>
+          <div class="servant-class-ico"></div>
+        </div>
+      </div>
+      <!-- Card Sample End -->
+      <!-- Card Sample Start -->
+      <div class="servant-card">
+        <div class="servant-border"></div>
+        <div class="servant-picture"></div>
+        <div class="servant-title">
+          <div class="servant-name"></div>
+          <div class="servant-class-name"></div>
+          <div class="servant-class-ico"></div>
+        </div>
+      </div>
+      <!-- Card Sample End -->
+      <!-- Card Sample Start -->
+      <div class="servant-card">
+        <div class="servant-border"></div>
+        <div class="servant-picture"></div>
+        <div class="servant-title">
+          <div class="servant-name"></div>
+          <div class="servant-class-name"></div>
+          <div class="servant-class-ico"></div>
+        </div>
+      </div>
+      <!-- Card Sample End -->
     </div>
   </body>
 </html>
