added sample servant

--- a/index.html
+++ b/index.html
@@ -203,15 +203,28 @@
         </div>
         <div id="nav-menu-2">
           <!-- Search Bar -->
+          <div id="search">
+            <label for="all">
+              <input
+                id="all"
+                name="servant"
+                type="radio"
+                class="nav-servant-radio"
+              />
+              <img
+                src="./images/class-ico-w/all-w.png"
+                alt="All Servant"
+                class="nav-servant-ico"
+              />
+            </label>
+          </div>
           <form action="#" id="search">
-            <a href="#" id="nav-beast"
-              ><img src="./images/class-ico-w/all-w.png" alt="All Servant"
-            /></a>
             <input type="text" placeholder="Enter Servant Name" /
             id="search-bar">
             <button id="button-search" class="button-fgo">
               <span>SEARCH</span>
             </button>
+            <!-- </div> -->
           </form>
         </div>
       </div>
@@ -221,89 +234,23 @@
     <div id="servants">
       <!-- Card Sample Start -->
       <div class="servant-card">
-        <div class="servant-border"></div>
-        <div class="servant-picture"></div>
-        <div class="servant-title">
-          <div class="servant-name"></div>
-          <div class="servant-class-name"></div>
-          <div class="servant-class-ico"></div>
+        <div class="servant-border">
+          <img
+            src="./images/servant-border/servant_card_01.png"
+            alt="Border 1"
+          />
         </div>
-      </div>
-      <!-- Card Sample End -->
-      <!-- Card Sample Start -->
-      <div class="servant-card">
-        <div class="servant-border"></div>
-        <div class="servant-picture"></div>
-        <div class="servant-title">
-          <div class="servant-name"></div>
-          <div class="servant-class-name"></div>
-          <div class="servant-class-ico"></div>
+        <div class="servant-picture">
+          <img src="./images/arashs2.png" alt="Arash" />
         </div>
-      </div>
-      <!-- Card Sample End -->
-      <!-- Card Sample Start -->
-      <div class="servant-card">
-        <div class="servant-border"></div>
-        <div class="servant-picture"></div>
         <div class="servant-title">
-          <div class="servant-name"></div>
-          <div class="servant-class-name"></div>
-          <div class="servant-class-ico"></div>
-        </div>
-      </div>
-      <!-- Card Sample End -->
-      <!-- Card Sample Start -->
-      <div class="servant-card">
-        <div class="servant-border"></div>
-        <div class="servant-picture"></div>
-        <div class="servant-title">
-          <div class="servant-name"></div>
-          <div class="servant-class-name"></div>
-          <div class="servant-class-ico"></div>
-        </div>
-      </div>
-      <!-- Card Sample End -->
-      <!-- Card Sample Start -->
-      <div class="servant-card">
-        <div class="servant-border"></div>
-        <div class="servant-picture"></div>
-        <div class="servant-title">
-          <div class="servant-name"></div>
-          <div class="servant-class-name"></div>
-          <div class="servant-class-ico"></div>
-        </div>
-      </div>
-      <!-- Card Sample End -->
-      <!-- Card Sample Start -->
-      <div class="servant-card">
-        <div class="servant-border"></div>
-        <div class="servant-picture"></div>
-        <div class="servant-title">
-          <div class="servant-name"></div>
-          <div class="servant-class-name"></div>
-          <div class="servant-class-ico"></div>
-        </div>
-      </div>
-      <!-- Card Sample End -->
-      <!-- Card Sample Start -->
-      <div class="servant-card">
-        <div class="servant-border"></div>
-        <div class="servant-picture"></div>
-        <div class="servant-title">
-          <div class="servant-name"></div>
-          <div class="servant-class-name"></div>
-          <div class="servant-class-ico"></div>
-        </div>
-      </div>
-      <!-- Card Sample End -->
-      <!-- Card Sample Start -->
-      <div class="servant-card">
-        <div class="servant-border"></div>
-        <div class="servant-picture"></div>
-        <div class="servant-title">
-          <div class="servant-name"></div>
-          <div class="servant-class-name"></div>
-          <div class="servant-class-ico"></div>
+          <div class="servant-title-text">
+            <!-- <div class="servant-class-name">Archer</div> -->
+            <div class="servant-name">Arash</div>
+          </div>
+          <div class="servant-class-ico">
+            <img src="./images/class-ico/archer-ico.png" alt="Archer" />
+          </div>
         </div>
       </div>
       <!-- Card Sample End -->
