API Loaded, please handle errors

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <!-- Servants -->
     <div id="servants">
       <!-- Card Sample Start -->
-      <div class="servant-card">
+      <!-- <div class="servant-card">
         <div class="servant-border">
           <img
             src="./images/servant-border/servant_card_01.png"
@@ -245,15 +245,15 @@
         </div>
         <div class="servant-title">
           <div class="servant-title-text">
-            <!-- <div class="servant-class-name">Archer</div> -->
             <div class="servant-name">Arash</div>
           </div>
           <div class="servant-class-ico">
             <img src="./images/class-ico/archer-ico.png" alt="Archer" />
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Card Sample End -->
     </div>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
