--- a/index.html
+++ b/index.html
@@ -231,6 +231,34 @@
     </div>
 
     <!-- Servants -->
+    <div id="overlay" class="hideMe"></div>
+    <div id="modals-wrapper">
+      <div id="modals">
+        <div id="modals-ascension" class="modals-column">
+         <img src="./images/arashs2.png" alt="Arash" id="servant-portrait">
+         <div id="ascension">
+          <label for="firstAsc">
+            <input type="radio" id="firstAsc" class="ascRadio">1st</input>
+          </label>
+          <label for="secondAsc">
+            <input type="radio" id="secondAsc" class="ascRadio">2nd</input>
+          </label>
+          <label for="thirdAsc">
+            <input type="radio" id="thirdAsc" class="ascRadio">3rd</input>
+          </label>
+          <label for="fourthAsc">
+            <input type="radio" id="fourthAsc" class="ascRadio">4th</input>
+          </label>
+         </div>
+        </div>
+        <div id="modals-info" class="modals-column">
+          <table>
+
+          </table>
+        </div>
+        <div id="modals-skills" class="modals-column"></div>
+      </div>
+    </div>
     <div id="servants">
       <!-- Card Sample Start -->
       <!-- <div class="servant-card">
