--- a/index.html
+++ b/index.html
@@ -234,28 +234,72 @@
     <div id="overlay" class="hideMe"></div>
     <div id="modals-wrapper">
       <div id="modals">
+        <!-- Ascension Column -->
         <div id="modals-ascension" class="modals-column">
-         <img src="./images/arashs2.png" alt="Arash" id="servant-portrait">
+         <img src="./images/arashs2.png" alt="Arash" id="servants-portrait">
+         <!-- Ascension -->
          <div id="ascension">
-          <label for="firstAsc">
-            <input type="radio" id="firstAsc" class="ascRadio">1st</input>
+          <label class="asc-opt" for="firstAsc" >
+            <input type="radio" id="firstAsc" name="ascensions" class="asc-Radio">1st</input>
           </label>
-          <label for="secondAsc">
-            <input type="radio" id="secondAsc" class="ascRadio">2nd</input>
+          <label class="asc-opt" for="secondAsc">
+            <input type="radio" id="secondAsc" name="ascensions" class="asc-Radio">2nd</input>
           </label>
-          <label for="thirdAsc">
-            <input type="radio" id="thirdAsc" class="ascRadio">3rd</input>
+          <label class="asc-opt" for="thirdAsc">
+            <input type="radio" id="thirdAsc" name="ascensions" class="asc-Radio">3rd</input>
           </label>
-          <label for="fourthAsc">
-            <input type="radio" id="fourthAsc" class="ascRadio">4th</input>
+          <label class="asc-opt" for="fourthAsc">
+            <input type="radio" id="fourthAsc" name="ascensions" class="asc-Radio">4th</input>
           </label>
          </div>
+         <span>Ascensions</span>
         </div>
+        <!-- Info Column -->
         <div id="modals-info" class="modals-column">
-          <table>
-
+          <table class="modals-table" >
+            <tr>
+              <td class="modals-info-bold">Name:</td>
+              <td class="modals-info-reg">Arash</td>
+            </tr>
+            <tr>
+              <td class="modals-info-bold">Gender:</td>
+              <td class="modals-info-reg">Male</td>
+            </tr> 
+            <tr>
+              <td class="modals-info-bold">Class:</td>
+              <td class="modals-info-reg">Archer</td>
+            </tr>
+            <tr>
+              <td class="modals-info-bold">Max Level:</td>
+              <td class="modals-info-reg">60</td>
+            </tr>
+            <tr>
+              <td class="modals-info-bold">Attribute:</td>
+              <td class="modals-info-reg">Earth</td>
+            </tr>
+            <tr>
+              <td class="modals-info-bold">ID:</td>
+              <td class="modals-info-reg">16</td>
+            </tr>
+            <tr>
+              <td class="modals-info-bold">ATK:</td>
+              <td class="modals-info-reg">1,057 / 5,816</td>
+            </tr>
+            <tr>
+              <td class="modals-info-bold">HP:</td>
+              <td class="modals-info-reg">1,424 / 7,122</td>
+            </tr>
+            <tr>
+              <td class="modals-info-bold">VA:</td>
+              <td class="modals-info-reg">Tsuruoka Satoshi</td>
+            </tr>
+            <tr>
+              <td class="modals-info-bold">Illustrator:</td>
+              <td class="modals-info-reg">BLACK</td>
+            </tr>
           </table>
         </div>
+        <!-- Skills Column -->
         <div id="modals-skills" class="modals-column"></div>
       </div>
     </div>
