--- a/index.html
+++ b/index.html
@@ -469,6 +469,6 @@
       </div> -->
       <!-- Card Sample End -->
     </div>
-    <script type="module" src="./js/main.js"></script>
+    <!-- <script type="module" src="./js/main.js"></script> -->
   </body>
 </html>
