added loading screen

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <title>FGO Servant Directory</title>
   </head>
   <body>
+    <div class="servant-load">
+      <img src="./images/fou-loads.gif" alt="fou" />
+    </div>
     <div id="navigation">
       <div id="nav-container">
         <div id="nav-title">
           <span> Select a Class </span>
         </div>
         <div id="nav-menu-1">
-          <!-- Icons here -->
-
           <label for="saber">
             <input
               id="saber"
