Nav filter added and working, next is Search bar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="shortcut icon" href="#" />
     <title>FGO Servant Directory</title>
   </head>
   <body>
@@ -136,9 +137,9 @@
               class="nav-servant-ico"
             />
           </label>
-          <label for="mooncancer">
+          <label for="moonCancer">
             <input
-              id="mooncancer"
+              id="moonCancer"
               name="servant"
               type="radio"
               class="nav-servant-radio"
