--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="shortcut icon" href="#" />
     <title>FGO Servant Directory</title>
@@ -235,8 +235,8 @@
     <!-- Servants -->
 
     <!-- Modal -->
-    <div id="modals-wrapper" class="hideMe">
-      <div id="overlay" class="hideMe"></div>
+    <div id="modals-wrapper" class="hideModal">
+      <div id="overlay" class="hideModal"></div>
     </div>
     <div id="servants">
       <!-- Card Sample Start -->
