--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     </div>
     <div id="navigation">
       <div id="nav-container">
+        <div id="nav-burger">&#9776;</div>
         <div id="nav-title">
-          <span> Select a Class </span>
+          <span>FGO Servant Directory</span>
         </div>
         <div id="nav-menu-1">
           <label for="saber">
