Changed Logo, responsive modal, and responsive servant cards  added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     </div>
     <div id="navigation">
       <div id="nav-container">
-        <div id="nav-burger">&#9776;</div>
+        <!-- <div class="logo"></div> -->
+        <img
+          src="./images/Fate_Grand_Order_logo.png"
+          alt="FGO Logo"
+          class="nav-logo"
+        />
         <div id="nav-title">
-          <span>FGO Servant Directory</span>
+          <span>Select a Class</span>
         </div>
         <div id="nav-menu-1">
           <label for="saber">
@@ -222,8 +227,11 @@
             </label>
           </div>
           <form action="#" id="search">
-            <input type="text" placeholder="Enter Servant Name" /
-            id="search-bar">
+            <input
+              type="text"
+              placeholder="Search a Servant..."
+              id="search-bar"
+            />
             <!-- </div> -->
           </form>
         </div>
